<resources>
    <string name="app_name">ShareUS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ShareUS</string>
    <string name="nav_header_subtitle">¿Todavía no has realizado ningún viaje? ¡Pruébanos!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Mis Viajes</string>
    <string name="menu_gallery">Iniciar Sesión</string>
    <string name="menu_slideshow">Publicar Viajes</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="spinneruniversidad">Selecciona tu universidad</string>
    <string name="spinnerubi">Selecciona tu ubicación de partida</string>

    <string name="eligedestino">Elige tu destino</string>
    <string name="universidad1">ETSI</string>
    <string name="universidad2">FCOM</string>
    <string name="universidad3">ETSA</string>
    <string name="universidad4">Reina Mercedes</string>

    <string name="eligeorigen">Elige tu origen</string>
    <string name="ubi1">Triana</string>
    <string name="ubi2">Sevilla Este</string>
    <string name="ubi3">Espartinas</string>
    <string name="ubi4">Bellavista</string>
    <string name="title_activity_detail">ScrollingActivity</string>
    <string name="encontrar_viaje">¿A dónde quiere ir?</string>
    <string name="btn_buscar">Buscar</string>
    <string name="large_text">

        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="origen">Origen</string>
    <string name="destino">Destino</string>
    <string name="precio">Precio</string>
    <string name="a_adir_viaje">Añadir Viaje</string>
    <string name="no_se_han_encontrado_resultados">No se han encontrado resultados.</string>
    <string name="obteniendo_datos">Obteniendo datos...</string>
    <string name="cargando">Cargando...</string>
    <string name="no_se_han_encontrado_pasajeros">No se han encontrado pasajeros</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Iniciar Sesión</string>
    <string name="log_out">Cerrar Sesión</string>
    <string name="loging_in">Iniciando Sesión...</string>
    <string name="valora_al_conductor">Valora al conductor</string>
    <string name="subtext_stars1">De 0 a 5 estrellas donde:</string>
    <string name="subtext_stars2">0 estrellas es un 0/10</string>
    <string name="subtext_stars3">5 estrellas es un 10/10</string>
    <string name="title_activity_register">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="welcome_msg">¡Bienvenido a la aplicación de ShareUS!</string>
    <string name="welcome_msg_ext">Como es la primera vez que te vemos por aquí necesitamos saber un poco más de ti. Recuerda que tus datos son obligatorios para que el resto de usuarios de ShareUS puedan contactar contigo :)</string>
    <string name="telf">666555444</string>
    <string name="nombre">Jose Manuel</string>
    <string name="send">Enviar datos</string>
    <string name="azure">Lanzando autenticación con Microsoft Azure...</string>
    <string name="nuevo_viaje">Nuevo Viaje</string>
    <string name="bienvenido_a_bordo">¡Bienvenido a bordo!</string>
    <string name="subtext_viaje">Ahora mismo formas parte de los pasajeros de este viaje, por lo que hemos decidido recordarte algunos de los detalles más importantes.</string>
    <string name="de_acuerdo">De acuerdo</string>
    <string name="conductor">Conductor</string>
    <string name="ubicacion">Ubicación</string>
    <string name="fecha">Día y Hora</string>
    <string name="aviso_importante">Aviso importante</string>
    <string name="subtext_aviso">Hemos detectado demasiadas interacciones como pasajero en este viaje. Te aconsejamos que estes seguro antes de inscribirte en un viaje ya que se te bloqueará el acceso si continuamos detectando más cambios inesperados.</string>
</resources>