<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_misviajes"
            android:icon="@drawable/ic_menu_coche"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_publicar"
            android:icon="@drawable/ic_menu_calendario"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_encontrar"
            android:icon="@drawable/ic_menu_lupa"
            android:title="Buscar Viajes" />
        <item
            android:id="@+id/nav_prueba"
            android:icon="@drawable/ic_menu_lupa"
            android:title="Prueba" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_login"
            android:title="@string/log_out"/>
    </group>
</menu>