<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_misviajes">

    <fragment
        android:id="@+id/nav_misviajes"
        android:name="com.example.shareus.ui.misviajes.MisViajesFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_misviajes" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.shareus.ui.login.LoginFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_publicar"
        android:name="com.example.shareus.ui.publicar.PublicarFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_publicar" />
    <fragment
        android:id="@+id/nav_encontrar"
        android:name="com.example.shareus.ui.encontrar.EncontrarFragment"
        android:label="Encontrar Viaje"
        tools:layout="@layout/encontrar_fragment" />
    <fragment
        android:id="@+id/nav_prueba"
        android:name="com.example.shareus.ui.pruebas.BlankFragment"
        android:label="Prueba"
        tools:layout="@layout/fragment_blank" />
</navigation>