<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="10dp"
        android:useDefaultMargins="true"
        android:columnCount="1">
        <TextView
            android:id="@+id/TextViewValorar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:text="@string/bienvenido_a_bordo"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="30sp"/>
        <TextView
            android:id="@+id/TextViewsub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/subtext_viaje"
            android:justificationMode="inter_word"
            android:fontFamily="sans-serif-condensed"
            android:textSize="20sp"/>
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:useDefaultMargins="true"
            android:columnCount="3">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conductor"
                android:layout_column="0"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/driver_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@null"
                android:layout_column="0"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ubicacion"
                android:layout_column="0"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/origin_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@null"
                android:layout_column="0"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha"
                android:layout_column="0"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/time_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@null"
                android:layout_column="0"
                android:textSize="20sp"/>
        </GridLayout>
        <Button
            android:id="@+id/confirmar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/de_acuerdo"
            android:backgroundTint="@color/colorAccent"/>
    </GridLayout>






</RelativeLayout>