<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="10dp"
        android:useDefaultMargins="true"
        android:columnCount="1">
        <TextView
            android:id="@+id/TextViewValorar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:text="@string/aviso_importante"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="30sp"/>
        <TextView
            android:id="@+id/TextViewsub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/subtext_aviso"
            android:justificationMode="inter_word"
            android:fontFamily="sans-serif-condensed"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/confirmar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/de_acuerdo"
            android:backgroundTint="@color/colorAccent"/>
    </GridLayout>
</RelativeLayout>