<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="10dp"
        android:useDefaultMargins="true"
        android:columnCount="1">
        <TextView
            android:id="@+id/TextViewValorar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:text="@string/valora_al_conductor"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="30sp"/>
        <TextView
            android:id="@+id/TextViewsub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:text="@string/subtext_stars1"
            android:fontFamily="sans-serif-condensed"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/TextViewsub2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:text="@string/subtext_stars2"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/TextViewsub3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:text="@string/subtext_stars3"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="15sp"/>
        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="match_parent"
            android:numStars="5"
            android:theme="@style/Theme.ShareUS.Stars"
            android:rating="3"
            android:stepSize="0.5"/>
        <Button
            android:id="@+id/enviarvaloracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Valorar"
            android:backgroundTint="@color/colorAccent"/>
    </GridLayout>






</RelativeLayout>