<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryDark"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <androidx.cardview.widget.CardView
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="20dp"
        app:cardCornerRadius="10dp">
        <RelativeLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_msg"
                android:textSize="30sp"
                android:layout_marginHorizontal="30dp"
                android:textAlignment="center"
                android:fontFamily="sans-serif-condensed-medium"/>
            <ImageView
                android:id="@+id/image_we"
                android:layout_below="@id/title"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_margin="20dp"
                android:src="@drawable/ic_undraw_through_the_park"/>
            <TextView
                android:layout_below="@id/image_we"
                android:id="@+id/long_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_msg_ext"
                android:textSize="20sp"
                android:layout_marginHorizontal="20dp"
                android:justificationMode="inter_word"
                android:fontFamily="sans-serif-condensed"/>
            <GridLayout
                android:layout_below="@id/long_text"
                android:id="@+id/form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_centerHorizontal="true"
                android:columnCount="2">
                <ImageView
                    android:layout_column="0"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_baseline_people_alt_24"
                    app:tint="@color/colorPrimary" />
                <EditText
                    android:layout_column="1"
                    android:inputType="textPersonName"
                    android:hint="@string/nombre"
                    android:maxLines="1"
                    android:id="@+id/nombre"/>
                <ImageView
                    android:layout_column="0"
                    android:layout_gravity="center_vertical"
                    app:tint="@color/colorPrimary"
                    android:src="@drawable/ic_baseline_local_phone_24"/>
                <EditText
                    android:layout_column="1"
                    android:maxLines="1"
                    android:inputType="phone"
                    android:hint="@string/telf"
                    android:id="@+id/telefono"/>
            </GridLayout>
            <Button
                android:id="@+id/submit_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/form"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/send"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>